{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 20,
  "lineage": "6151585f-31e6-0ab6-4cf1-84c9782f052e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgweip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0227e49d84f7d86d6",
            "domain": "vpc",
            "id": "eipalloc-0d1fa33fe3544f6f8",
            "network_interface": "eni-0fd106bc1e8c11bde",
            "private_dns": "ip-192-168-3-118.us-east-2.compute.internal",
            "private_ip": "192.168.3.118",
            "public_dns": "ec2-52-14-192-174.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.192.174",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Iggw",
            "aws_vpc.customVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Iggw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02e6490d7ee073b6e",
            "owner_id": "667811466675",
            "tags": {
              "Name": "vpc-0655ebbcbaccefea6IgGW"
            },
            "vpc_id": "vpc-0655ebbcbaccefea6"
          },
          "dependencies": [
            "aws_vpc.customVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1fa33fe3544f6f8",
            "id": "nat-0b487b04c8267bfac",
            "network_interface_id": "eni-0fd106bc1e8c11bde",
            "private_ip": "192.168.3.118",
            "public_ip": "52.14.192.174",
            "subnet_id": "subnet-02d097461d640252a",
            "tags": {
              "Name": "vpc-0655ebbcbaccefea6NATGW"
            }
          },
          "dependencies": [
            "aws_eip.natgweip",
            "aws_internet_gateway.Iggw",
            "aws_subnet.PubSubnets",
            "aws_vpc.customVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "natgwroute",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-066336f41f76672011080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0b487b04c8267bfac",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-066336f41f7667201",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.natgweip",
            "aws_internet_gateway.Iggw",
            "aws_nat_gateway.natgw",
            "aws_subnet.PubSubnets",
            "aws_vpc.customVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PubRouteTable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05042da6aaed3f611",
            "owner_id": "667811466675",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e6490d7ee073b6e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0655ebbcbaccefea6"
          },
          "dependencies": [
            "aws_internet_gateway.Iggw",
            "aws_vpc.customVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubRTAssociation",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023fb6193be2635d5",
            "route_table_id": "rtb-05042da6aaed3f611",
            "subnet_id": "subnet-02d097461d640252a"
          },
          "dependencies": [
            "aws_internet_gateway.Iggw",
            "aws_route_table.PubRouteTable",
            "aws_subnet.PubSubnets",
            "aws_vpc.customVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0117230e00e6cd2b8",
            "route_table_id": "rtb-05042da6aaed3f611",
            "subnet_id": "subnet-0bc4444d230e4d691"
          },
          "dependencies": [
            "aws_internet_gateway.Iggw",
            "aws_route_table.PubRouteTable",
            "aws_subnet.PubSubnets",
            "aws_vpc.customVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivSubnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:667811466675:subnet/subnet-0b07e6393586c3606",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0b07e6393586c3606",
            "map_public_ip_on_launch": false,
            "owner_id": "667811466675",
            "tags": {
              "Name": "terapriv1",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0655ebbcbaccefea6"
          },
          "dependencies": [
            "aws_vpc.customVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:667811466675:subnet/subnet-0d13133fde5cb2c01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-0d13133fde5cb2c01",
            "map_public_ip_on_launch": false,
            "owner_id": "667811466675",
            "tags": {
              "Name": "terapriv2",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0655ebbcbaccefea6"
          },
          "dependencies": [
            "aws_vpc.customVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:667811466675:subnet/subnet-0661abf68635ce722",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.6.0/24",
            "id": "subnet-0661abf68635ce722",
            "map_public_ip_on_launch": false,
            "owner_id": "667811466675",
            "tags": {
              "Name": "terapriv3",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0655ebbcbaccefea6"
          },
          "dependencies": [
            "aws_vpc.customVPC"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:667811466675:subnet/subnet-082a43dcfd6367ad3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.8.0/24",
            "id": "subnet-082a43dcfd6367ad3",
            "map_public_ip_on_launch": false,
            "owner_id": "667811466675",
            "tags": {
              "Name": "terapriv4",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0655ebbcbaccefea6"
          },
          "dependencies": [
            "aws_vpc.customVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PubSubnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:667811466675:subnet/subnet-02d097461d640252a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-02d097461d640252a",
            "map_public_ip_on_launch": true,
            "owner_id": "667811466675",
            "tags": {
              "Name": "terapub1"
            },
            "vpc_id": "vpc-0655ebbcbaccefea6"
          },
          "dependencies": [
            "aws_vpc.customVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:667811466675:subnet/subnet-0bc4444d230e4d691",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.5.0/24",
            "id": "subnet-0bc4444d230e4d691",
            "map_public_ip_on_launch": true,
            "owner_id": "667811466675",
            "tags": {
              "Name": "terapub2"
            },
            "vpc_id": "vpc-0655ebbcbaccefea6"
          },
          "dependencies": [
            "aws_vpc.customVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "customVPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:667811466675:vpc/vpc-0655ebbcbaccefea6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-02a20fd1c8bcf002b",
            "default_route_table_id": "rtb-066336f41f7667201",
            "default_security_group_id": "sg-0627cdb38670f5849",
            "dhcp_options_id": "dopt-88e20ae1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0655ebbcbaccefea6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-066336f41f7667201",
            "owner_id": "667811466675",
            "tags": {
              "Name": "teravpc"
            }
          }
        }
      ]
    }
  ]
}